...
    <string name="password">Password</string>
    <string name="annulla">Annulla</string>
    <string name="stop">Stop</string>
    <string name="conferma">Conferma</string>
    <string name="facebook_app_id">212692166599390</string><!--todo configurazione login facebook 6.2:  Da togliere successivamente quando renderemo l'app pubblica   -->
    <string name="fb_login_protocol_scheme">fb212692166599390</string>
    <string name="continua_senza_autenticazione">Continua senza autenticazione</string>
    <string name="title_home">Home</string>
    <string name="cronologia">Cronologia</string>
    <string name="preferiti">Preferiti</string>
    <string name="organizzazioni">Organizzazioni</string>
    <string name="track_me">Tracciami</string>
    <string name="login_ldap">Login LDAP</string>
...
    <string name="nome_organizzazione">Nome:</string>
    <string name="numero_telefonico">Numero telefonico:</string>
    <string name="informazione_di_ldap">Informazione LDAP</string>
    <string name="icona_dell_organizzazione">Icona dell\'organizzazione</string>
    <string name="template_indirizzo" formatted="false">via: "%s , %s, CAP: %s, %s, %s.</string>
    <string name="template_ldap" formatted="false">url: \"%s\", port: %d, dn: \"%s\", cn: \"%s\".</string>
    <string name="chiudi">Chiudi</string>
    <string name="elenco_delle_organizzazioni_disponibili">Elenco delle organizzazioni disponibili:</string>
    <string name="recupero_password">Recupero password</string>
    <string name="ask_mail_for_recupero_password">Inserisci la mail con la quale ti sei registrato/a all\'applicazione!</string>
    <string name="inserisci_le_credenziali_ldap">Inserisci le tue credenziali LDAP</string>
    <string name="successfully_logout">Successufully logout</string>
    <string name="icona_che_rappresenta_ingresso_o_uscita">Icona che rappresenta ingresso o uscita</string>
...
