...
                android:contentDescription="@string/icon_dell_organizzazione"
                android:src="@drawable/icon_stalker"
                app:civ_border_width="2dp" />


            <TextView
                android:id="@+id/tvNomeOrganizzazione"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="5"
                android:fontFamily="sans-serif-light"
                android:textSize="25sp" />
...
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_add_circle_outline_black_24dp" />

                <Button
                    android:id="@+id/btnShowDetails"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_info_black_24dp"
                    android:gravity="center_horizontal" />

...
