...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/btnProcediSenzaAuth"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/refresh_btn_style"
        android:text="@string/continua_senza_autenticazione"
        android:textColor="@color/white"
...
